Sign up text clickable

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -16,6 +16,5 @@
     <string name="or">veya</string>
     <string name="connect_with_facebook">Facebook ile giriş yap</string>
     <string name="connect_with_google">Google ile giriş yap</string>
-    <string name="dont_have_an_account">Hesabınız yok mu?</string>
-    <string name="sign_up">  Kaydol.</string>
+    <string name="dont_have_an_account">Hesabın yok mu? Kaydol.</string>
 </resources>
