--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,6 @@
     <string name="or">or</string>
     <string name="connect_with_facebook">Sign in with Facebook</string>
     <string name="connect_with_google">Sign in with Google</string>
-    <string name="dont_have_an_account">Don\'t have an account?</string>
-    <string name="sign_up">  Sign Up.</string>
+    <string name="dont_have_an_account">Don\'t have an account? Sign Up.</string>
 
 </resources>
