--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -19,4 +19,5 @@
     <string name="dont_have_an_account">Hesabın yok mu? Kaydol.</string>
     <string name="fullname">İsim</string>
     <string name="register">Kayıt Ol</string>
+    <string name="action_settings">Ayarlar</string>
 </resources>
