--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
+    <string name="action_sign_up">Sign Up</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">Password must be at least 6 characters</string>
     <string name="error_incorrect_password">This password is incorrect</string>
@@ -26,5 +27,6 @@
     <string name="action_settings">Settings</string>
     <string name="error_invalid_fullname">Full name must be at least 6 characters</string>
     <string name="user_is_being_created">User is being created...</string>
+    <string name="check_internet_conn">Please check your internet connection!</string>
 
 </resources>
