--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="error_invalid_fullname">Full name must be at least 6 characters</string>
     <string name="user_is_being_created">User is being created...</string>
     <string name="check_internet_conn">Please check your internet connection!</string>
+    <string name="create_user_failed">E-mail address already registered!</string>
 
 </resources>
