--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,11 +9,7 @@
     <string name="action_sign_up">Sign Up</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">Password must be at least 6 characters</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+    <string name="error_field_required">E-mail address is required</string>
     <string name="or">or</string>
     <string name="connect_with_facebook">Sign in with Facebook</string>
     <string name="connect_with_google">Sign in with Google</string>
@@ -27,7 +23,9 @@
     <string name="action_settings">Settings</string>
     <string name="error_invalid_fullname">Full name must be at least 6 characters</string>
     <string name="user_is_being_created">User is being created...</string>
-    <string name="check_internet_conn">Please check your internet connection!</string>
-    <string name="create_user_failed">E-mail address already registered!</string>
+    <string name="check_internet_conn">Please check your internet connection</string>
+    <string name="create_user_failed">E-mail address already registered</string>
+    <string name="logging_in">Logging in...</string>
+    <string name="user_auth_failed">Email address or password is incorrect</string>
 
 </resources>
