--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,6 @@
     <string name="user_auth_failed">Email address or password is incorrect</string>
     <string name="facebook_app_id">1628314297242547</string>
     <string name="fb_login_protocol_scheme">fb1628314297242547</string>
+    <string name="something_went_wrong">Something went wrong. Please try again</string>
 
 </resources>
