--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -18,9 +18,7 @@
     <string name="register">Kayıt Ol</string>
     <string name="action_settings">Ayarlar</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="title_dashboard">Panel</string>
     <string name="title_home">Anasayfa</string>
-    <string name="title_notifications">Bildirimler</string>
     <string name="error_invalid_fullname">İsim en az 6 karakterden oluşmalıdır</string>
     <string name="user_is_being_created">Kullanıcı oluşturuluyor...</string>
     <string name="error_invalid_password">Şifre en az 6 karakterden oluşmalıdır</string>
@@ -34,5 +32,7 @@
     <string name="sport_text">Spor</string>
     <string name="table_games_text">Masa Oyunları</string>
     <string name="concert_text">Konser</string>
+    <string name="title_messages">Mesajlar</string>
+    <string name="title_profile">Profil</string>
 
 </resources>
