--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,8 @@
     <string name="register">Register</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_messages">Messages</string>
+    <string name="title_profile">Profile</string>
     <string name="action_settings">Settings</string>
     <string name="error_invalid_fullname">Full name must be at least 6 characters</string>
     <string name="user_is_being_created">User is being created...</string>
