--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -34,5 +34,9 @@
     <string name="concert_text">Konser</string>
     <string name="title_messages">Mesajlar</string>
     <string name="title_profile">Profil</string>
+    <string name="range">Mesafe :</string>
+    <string name="change_password">Şifreyi Değiştir</string>
+    <string name="save_changes">Değişiklikleri Kaydet</string>
+    <string name="string_logout">Çıkış Yap</string>
 
 </resources>
