--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -39,5 +39,8 @@
     <string name="save_changes">Değişiklikleri Kaydet</string>
     <string name="string_logout">Çıkış Yap</string>
     <string name="string_settings">Ayarlar</string>
+    <string name="remove_photo">Fotoğrafı kaldır</string>
+    <string name="select_photo">Fotoğrraf seç</string>
+    <string name="camera">Kamera</string>
 
 </resources>
