--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,5 +55,8 @@
     <string name="save_changes">Save Changes</string>
     <string name="string_logout">Logout</string>
     <string name="string_settings">Settings</string>
+    <string name="camera">Camera</string>
+    <string name="select_photo">Select photo</string>
+    <string name="remove_photo">Remove photo</string>
 
 </resources>
