fragment transaction animation added

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -40,7 +40,7 @@
     <string name="string_logout">Çıkış Yap</string>
     <string name="string_settings">Ayarlar</string>
     <string name="remove_photo">Fotoğrafı kaldır</string>
-    <string name="select_photo">Fotoğrraf seç</string>
+    <string name="select_photo">Fotoğraf seç</string>
     <string name="camera">Kamera</string>
     <string name="changes_saved">Değişiklikler başarıyla kaydedildi</string>
 
