--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,6 @@
     <string name="camera">Camera</string>
     <string name="select_photo">Select photo</string>
     <string name="remove_photo">Remove photo</string>
+    <string name="change_pass_toolbar_tittle">E-mail and Password</string>
 
 </resources>
