change password screen designed

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -44,5 +44,7 @@
     <string name="camera">Kamera</string>
     <string name="changes_saved">Değişiklikler başarıyla kaydedildi</string>
     <string name="change_pass_toolbar_tittle">E-posta ve Şifre</string>
+    <string name="current_password">Geçerli şifre</string>
+    <string name="new_password">Yeni şifre</string>
 
 </resources>
