--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,5 +62,6 @@
     <string name="change_pass_toolbar_tittle">E-mail and Password</string>
     <string name="current_password">Current password</string>
     <string name="new_password">New password</string>
+    <string name="current_pass_incorrect">Current password is incorrect</string>
 
 </resources>
