edittext focus events and login/signup keybord events

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -47,5 +47,6 @@
     <string name="current_password">Geçerli şifre</string>
     <string name="new_password">Yeni şifre</string>
     <string name="current_pass_incorrect">Geçerli şifre yanlış</string>
+    <string name="change_password_button_text">E-posta/şifre değiştir</string>
 
 </resources>
