password change algoritm changed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,5 +64,7 @@
     <string name="new_password">New password</string>
     <string name="current_pass_incorrect">Current password is incorrect</string>
     <string name="change_password_button_text">Change email/password</string>
+    <string name="same_password">Your new password is the same as your current password</string>
+    <string name="change_email_exeption">Something went wrong. Please try again after logging in again</string>
 
 </resources>
