--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -48,5 +48,7 @@
     <string name="new_password">Yeni şifre</string>
     <string name="current_pass_incorrect">Geçerli şifre yanlış</string>
     <string name="change_password_button_text">E-posta/şifre değiştir</string>
+    <string name="same_password">Yeni şifreniz şimdiki şifreniz ile aynı</string>
+    <string name="change_email_exeption">Bir şeyler yanlış gitti. Lütfen tekrar giriş yaptıktan sonra deneyin</string>
 
 </resources>
