title and description text field and char counter added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,5 +71,7 @@
     <string name="create_event">Create Event</string>
     <string name="category">Category</string>
     <string name="cinema_text">Cinema</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
 
 </resources>
