--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -55,5 +55,7 @@
     <string name="create_event">Etkinlik Oluştur</string>
     <string name="category">Kategori</string>
     <string name="cinema_text">Sinema</string>
+    <string name="title">Başlık</string>
+    <string name="description">Açıklama</string>
 
 </resources>
