--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,5 +74,6 @@
     <string name="title">Title</string>
     <string name="description">Description</string>
     <string name="add_location">Add Location</string>
+    <string name="google_maps_key">AIzaSyDieRa-MiFqtQslyrvkxMtFKSIQtpgjRks</string>
 
 </resources>
