event detail fragment added

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -68,5 +68,6 @@
     <string name="in_future">Lütfen gelecek zamanda bir tarih ve saat seçiniz</string>
     <string name="event_created_success">Etkinliğiniz başarıyla oluşturuldu</string>
     <string name="hold_to_drag_marker">İşaretçiyi sürüklemek için basılı tutun</string>
+    <string name="event_detail_text">Etkinlik Detayları</string>
 
 </resources>
