--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,5 +85,6 @@
     <string name="in_future">Please select a date and time in the future</string>
     <string name="event_created_success">Your event has been successfully created</string>
     <string name="hold_to_drag_marker">Press and hold to drag the marker</string>
+    <string name="event_detail_text">Event Detail</string>
 
 </resources>
