--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="dont_have_an_account">Don\'t have an account? Sign Up.</string>
     <string name="fullname">Fullname</string>
     <string name="register">Register</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Home</string>
     <string name="title_home">Home</string>
     <string name="title_messages">Messages</string>
     <string name="title_profile">Profile</string>
