distance parameter added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,5 +87,6 @@
     <string name="hold_to_drag_marker">Press and hold to drag the marker</string>
     <string name="event_detail_text">Event Detail</string>
     <string name="event_end_time">Event end time:</string>
+    <string name="very_close">very close</string>
 
 </resources>
