--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -70,5 +70,6 @@
     <string name="hold_to_drag_marker">İşaretçiyi sürüklemek için basılı tutun</string>
     <string name="event_detail_text">Etkinlik Detayları</string>
     <string name="event_end_time">Etkinlik bitiş zamanı:</string>
+    <string name="very_close">çok yakın</string>
 
 </resources>
