My event fragment added

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -74,5 +74,9 @@
     <string name="successful">Başarılı</string>
     <string name="allow_location_title">Location access</string>
     <string name="allow_location">PlayerX\'in bu cihazın konumuna erişmesine izin ver</string>
+    <string name="edit_event">Etkinliği Düzenle</string>
+    <string name="update_event">Etkinliği Güncelle</string>
+    <string name="event_updated">Etkinliğiniz başarıyla güncellendi</string>
+    <string name="delete_event">Etkinliği Sil</string>
 
 </resources>
