--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,5 +95,7 @@
     <string name="update_event">Update Event</string>
     <string name="event_updated">Your event has been successfully updated</string>
     <string name="delete_event">Delete Event</string>
+    <string name="delete_event_question">Do you want to delete this event?</string>
+    <string name="event_deleted">Event deleted</string>
 
 </resources>
