--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     <string name="pc_games_text">PC Games</string>
     <string name="concert_text">Concert</string>
     <string name="other_text">Other</string>
-    <string name="large_text">
+    <string name="large_text" translatable="false">
         "Material is the metaphor.\n\n"
 
         "A material metaphor is the unifying theory of a rationalized space and a system of motion."
@@ -74,7 +74,7 @@
     <string name="title">Title</string>
     <string name="description">Description</string>
     <string name="add_location">Add Location</string>
-    <string name="google_maps_key">AIzaSyDieRa-MiFqtQslyrvkxMtFKSIQtpgjRks</string>
+    <string name="google_maps_key" translatable="false">AIzaSyDieRa-MiFqtQslyrvkxMtFKSIQtpgjRks</string>
     <string name="event_end_text">Event end:</string>
     <string name="date">Date</string>
     <string name="time">Time</string>
@@ -98,7 +98,5 @@
     <string name="delete_event_question">Do you want to delete this event?</string>
     <string name="event_deleted">Event deleted</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
