--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,7 +89,7 @@
     <string name="event_end_time">Event end time:</string>
     <string name="very_close">very close</string>
     <string name="successful">Successful</string>
-    <string name="allow_location_title">Konum erişimi</string>
+    <string name="allow_location_title">Location Access</string>
     <string name="allow_location">Allow PlayerX to access this device\'s location</string>
     <string name="edit_event">Edit Event</string>
     <string name="update_event">Update Event</string>
@@ -97,6 +97,8 @@
     <string name="delete_event">Delete Event</string>
     <string name="delete_event_question">Do you want to delete this event?</string>
     <string name="event_deleted">Event deleted</string>
+    <string name="no_event">Unfortunately there are no events here.</string>
+    <string name="no_event_posted">There are no event posted. Let\'s create an event!</string>
 
 
 </resources>
